発言内容作成中

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,4 @@ services:
     restart: always
     build: .
     container_name: "python3"
-    working_dir: "/root/"
-    tty: true
-    volumes:
-      - ./app:/root/opt
-  code:
-    image: codercom/code-server
-    restart: always
-    ports:
-      - "8443:8443"
-    volumes:
-      - ./app:/home/yuki/DoorsOfFreedom
+    working_dir: "/app"
