--- a/.gitignore
+++ b/.gitignore
@@ -1936,3 +1936,4 @@ venv/lib/python3.8/site-packages/yarl-1.6.3.dist-info/METADATA
 venv/lib/python3.8/site-packages/yarl-1.6.3.dist-info/RECORD
 venv/lib/python3.8/site-packages/yarl-1.6.3.dist-info/top_level.txt
 venv/lib/python3.8/site-packages/yarl-1.6.3.dist-info/WHEEL
+src/config.ini
